docs(i18n): update about section text in english and french locales

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -11,7 +11,7 @@
   },
   "about": {
     "title": "About",
-    "text": "I am a Fullstack Engineer with over 10 years of experience building and evolving enterprise SaaS platforms.\n\nMy work centers on modernizing legacy systems, improving architectural boundaries, and designing scalable frontend and backend solutions. I focus on creating modular structures that remain maintainable as systems grow in complexity.\n\nI value clean architecture, pragmatic engineering decisions, and long-term system sustainability."
+    "text": "Fullstack Engineer and Software Architect with over 10 years of experience in enterprise SaaS systems.\n\nFocused on scaling platforms and modernizing legacy architectures. Designing modular, maintainable systems built to manage complexity at scale.\n\nClean architecture and pragmatic engineering guide every technical decision."
   },
   "expertise": {
     "title": "Expertise",
