--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -11,7 +11,7 @@
   },
   "about": {
     "title": "À propos",
-    "text": "Je suis Ingénieur Fullstack avec plus de 10 ans d’expérience dans la construction et l’évolution de plateformes SaaS d’entreprise.\n\nMon travail se concentre sur la modernisation des systèmes existants, l’amélioration des frontières architecturales et la conception de solutions frontend et backend évolutives. Je conçois des structures modulaires qui restent maintenables à mesure que la complexité des systèmes augmente.\n\nJ’accorde de l’importance à une architecture propre, à des décisions d’ingénierie pragmatiques et à la durabilité des systèmes sur le long terme."
+    "text": "Ingénieur Fullstack et Architecte logiciel avec plus de 10 ans d’expérience dans les systèmes SaaS d’entreprise.\n\nSpécialisé dans la montée en charge des plateformes et la modernisation d’architectures legacy. Conception de systèmes modulaires et maintenables, pensés pour maîtriser la complexité à grande échelle.\n\nL’architecture propre et une ingénierie pragmatique guident chacune de mes décisions techniques."
   },
   "expertise": {
     "title": "Expertise",
